<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_build_version">Build version</string>
    <string name="about_card_title">About</string>
    <string name="about_open_source_licenses">Open source licenses</string>
    <string name="about_open_source_licenses_summary">License details for open source software</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_terms_of_service">Terms of service</string>
    <string name="account_filter_view_checked">%s checked</string>
    <string name="account_filter_view_not_checked">%s not checked</string>
    <string name="account_phone">Device</string>
    <string name="account_sim">SIM</string>
    <string name="account_sync_off">Account sync is off. Tap to turn on.</string>
    <string name="account_type_format">%1$s contact</string>
    <string name="action_menu_add_new_contact_button">Create new contact</string>
    <string name="action_menu_back_from_edit_select">close</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="activity_title_contacts_filter">Contacts to display</string>
    <string name="activity_title_licenses">Open source licenses</string>
    <string name="activity_title_settings">Settings</string>
    <string name="add_account">Add account</string>
    <string name="add_contact_dlg_message_fmt">Add \"%s\" to contacts?</string>
    <string name="add_new_account">Add new account</string>
    <string name="aggregation_suggestion_edit_dialog_message">Switch to editing the selected contact? Information you entered so far will be copied.</string>
    <string name="announce_collapsed_fields">Collapsed</string>
    <string name="announce_expanded_fields">Expanded</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Contacts</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="audio_chat">Voice chat</string>
    <string name="auto_sync_off">Auto-sync is off. Tap to turn on.</string>
    <string name="back_arrow_content_description">Back</string>
    <string name="batch_delete_confirmation">Delete selected contacts?</string>
    <string name="batch_delete_multiple_accounts_confirmation">The contacts to be deleted have details from multiple accounts. Details from read-only accounts will be hidden, not deleted.</string>
    <string name="batch_delete_read_only_contact_confirmation">Contacts from your read-only accounts cannot be deleted, but they can be hidden.</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to link with %s:</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="caching_vcard_message">Caching vCard(s) to local temporary storage. The actual import will start soon.</string>
    <string name="caching_vcard_title">Caching</string>
    <string name="callEnded_pulled">Call transferred to another device.</string>
    <string name="callFailed_QOS_unavailable">Quality of service unavailable</string>
    <string name="callFailed_access_information_discarded">Access information discarded</string>
    <string name="callFailed_bearer_capability_not_authorized">Bearer capability not authorized</string>
    <string name="callFailed_bearer_capability_unavailable">Bearer capability not presently available</string>
    <string name="callFailed_bearer_service_not_implemented">Bearer service not implemented</string>
    <string name="callFailed_call_rejected">Call rejected</string>
    <string name="callFailed_cb_enabled">Can\'t make outgoing calls while call barring is on.</string>
    <string name="callFailed_channel_unacceptable">Channel unacceptable</string>
    <string name="callFailed_conditional_IE_error">Conditional IE error</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_data_disabled">Call ended because cellular data was disabled.</string>
    <string name="callFailed_data_limit_reached">Data limit reached. Call ended.</string>
    <string name="callFailed_data_limit_reached_description">Call ended because the cellular data limit has been reached.</string>
    <string name="callFailed_destination_out_of_order">Destination out of order</string>
    <string name="callFailed_dialToDial">Changed to different number</string>
    <string name="callFailed_dialToDialVideo">Changed to video call</string>
    <string name="callFailed_dialToSs">Call changed to SS request</string>
    <string name="callFailed_dialToUssd">Call changed to USSD request</string>
    <string name="callFailed_dialVideoToDial">Changed to regular call</string>
    <string name="callFailed_dialVideoToDialVideo">Changed to different number</string>
    <string name="callFailed_dialVideoToSs">Video call changed to SS request</string>
    <string name="callFailed_dialVideoToUssd">Video call changed to USSD request</string>
    <string name="callFailed_dsac_restricted">Calls restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls restricted by access control.</string>
    <string name="callFailed_facility_rejected">Facility rejected</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_incoming_calls_barred_within_CUG">Incoming calls barred within the CUG</string>
    <string name="callFailed_incompatible_destination">Incompatible destination</string>
    <string name="callFailed_information_element_non_existent">Information element non,existent or not implemented</string>
    <string name="callFailed_interworking_unspecified">Interworking, unspecified</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_invalid_mandatory_information">Invalid mandatory information</string>
    <string name="callFailed_invalid_number_format">Invalid number format (incomplete number)</string>
    <string name="callFailed_invalid_transaction_identifier">Invalid transaction identifier value</string>
    <string name="callFailed_invalid_transit_NW_selection">Invalid transit network selection</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_maximum_reached">All available lines are in use. To make a call, disconnect one of the calls on this device, or on one of your other devices.</string>
    <string name="callFailed_message_not_compatible_with_protocol_state">Message not compatible with protocol state</string>
    <string name="callFailed_message_type_non_implemented">Message type non-existent or not implemented</string>
    <string name="callFailed_message_type_not_compatible_with_protocol_state">Message type not compatible with protocol state</string>
    <string name="callFailed_network_out_of_order">Network out of order</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_no_answer_from_user">User alerting, no answer</string>
    <string name="callFailed_no_circuit_avail">No circuit availiable</string>
    <string name="callFailed_no_route_to_destination">No route to destination</string>
    <string name="callFailed_no_user_responding">No user responding</string>
    <string name="contacts_unavailable_add_account">Add account</string>
    <string name="contacts_unavailable_import_contacts">Import</string>
    <string name="default_editor_account">Default account for new contacts</string>
    <string name="description_clear_search">Clear search</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_dialpad_back">Navigate back</string>
    <string name="description_dialpad_overflow">More options</string>
    <string name="display_options_phonetic_name_fields">Phonetic name</string>
    <string name="display_options_sort_list_by">Sort by</string>
    <string name="display_options_view_names_as">Name format</string>
    <string name="hint_findContacts">Search contacts</string>
    <string name="menu_blocked_numbers">Blocked numbers</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_create_contact_shortcut">Create shortcut</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_export">Export</string>
    <string name="menu_export_database">Export database files</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="menu_import">Import</string>
    <string name="menu_joinAggregate">Link</string>
    <string name="menu_linkedContacts">View linked contacts</string>
    <string name="menu_redirect_calls_to_vm">Route to voicemail</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_share">Share</string>
    <string name="noContacts">Your contacts list is empty</string>
    <string name="quickcontact_suggestion_cancel_button">CANCEL</string>
    <string name="quickcontact_suggestion_link_button">LINK CONTACTS</string>
    <string name="search_font_family">sans-serif</string>
    <string name="setting_about">About Contacts</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_my_info_title">My info</string>
    <string name="show_more_content_description">Show more</string>
    <string name="sim_import_button_text">Import</string>
    <string name="sim_import_cancel_content_description">Cancel</string>
    <string name="sim_import_empty_message">No contacts on your SIM card</string>
    <string name="sim_import_title_none_selected">Select contacts</string>
    <string name="suggestion_card_duplicates_title">Possible duplicates</string>
    <string name="suggestion_card_help_message">These contacts might be the same person. You can link them together as a single contact.</string>
    <string name="suggestion_card_this_contact_title">This contact</string>
</resources>