<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@+id/menu_star" android:showAsAction="always"/>
    <item android:id="@+id/menu_edit" android:showAsAction="always"/>
    <item android:id="@+id/menu_join" android:title="@string/menu_joinAggregate"/>
    <item android:id="@+id/menu_linked_contacts" android:title="@string/menu_linkedContacts"/>
    <item android:id="@+id/menu_delete" android:title="@string/menu_deleteContact"/>
    <item android:id="@+id/menu_share" android:title="@string/menu_share" android:alphabeticShortcut="s"/>
    <item android:id="@+id/menu_create_contact_shortcut" android:title="@string/menu_create_contact_shortcut"/>
    <item android:id="@+id/menu_set_ringtone" android:title="@string/menu_set_ring_tone"/>
    <item android:id="@+id/menu_send_to_voicemail" android:title="@string/menu_redirect_calls_to_vm"/>
    <item android:id="@+id/menu_help" android:title="@string/menu_help"/>
</menu>
