<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/quantum_ic_search_vd_theme_24" android:id="@+id/menu_search" android:title="@string/hint_findContacts" app:showAsAction="ifRoom"/>
    <item android:id="@+id/export_database" android:visible="false" android:title="@string/menu_export_database" android:showAsAction="never"/>
    <item android:icon="@drawable/quantum_ic_share_vd_theme_24" android:id="@+id/menu_share" android:title="@string/menu_share" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/quantum_ic_delete_vd_theme_24" android:id="@+id/menu_delete" android:title="@string/menu_deleteContact" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/quantum_ic_link_vd_theme_24" android:id="@+id/menu_join" android:title="@string/menu_joinAggregate" app:showAsAction="ifRoom"/>
</menu>
