<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar android:theme="@style/LightToolbarThemeOverlay" android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:elevation="3dp" app:navigationContentDescription="@string/sim_import_cancel_content_description" app:navigationIcon="@drawable/quantum_ic_close_vd_theme_24" app:title="@string/sim_import_title_none_selected" style="@style/LightToolbarStyle">
            <Button android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/import_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sim_import_button_text" style="@style/Widget.AppCompat.Button.Borderless"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:orientation="horizontal" android:id="@+id/account_header_container" android:background="?android:attr/colorBackground" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp" android:paddingStart="@dimen/activity_horizontal_margin" android:paddingEnd="@dimen/activity_horizontal_margin">
            <ImageView android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/account_type_icon" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginEnd="32dp"/>
            <TextView android:textSize="16sp" android:textColor="@color/secondary_text_color" android:ellipsize="end" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_gravity="center_vertical" android:id="@+id/account_name" android:layout_width="0dp" android:layout_height="wrap_content" android:maxLines="1" android:lines="1" android:layout_weight="1" android:textAlignment="viewStart"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/account_expander_icon" android:background="@null" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/quantum_ic_arrow_drop_down_vd_theme_24" android:scaleType="center" android:tint="?android:attr/textColorSecondary" android:minWidth="0dp" android:minHeight="0dp" android:contentDescription="@string/show_more_content_description" android:layout_marginEnd="5dp"/>
        </LinearLayout>
        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <ListView android:id="@+id/list" android:paddingTop="8dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <androidx.core.widget.ContentLoadingProgressBar android:layout_gravity="center" android:id="@+id/loading_progress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" style="@style/Widget.AppCompat.ProgressBar"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center" android:id="@+id/empty_message" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sim_import_empty_message"/>
        </FrameLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
