<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/search_box_expanded" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageButton android:id="@+id/search_back_button" android:background="?attr/selectableItemBackgroundBorderless" android:layout_width="@dimen/search_box_icon_size" android:layout_height="@dimen/search_box_icon_size" android:src="@drawable/quantum_ic_arrow_back_vd_theme_24" android:tint="@color/actionbar_background_color" android:contentDescription="@string/action_menu_back_from_search" android:layout_marginEnd="@dimen/search_box_navigation_icon_margin"/>
    <android.widget.AutoCompleteTextView android:textSize="@dimen/search_text_size" android:textColor="@color/searchbox_text_color" android:textColorHint="@color/searchbox_hint_text_color" android:id="@+id/search_view" android:background="@null" android:layout_width="0dp" android:layout_height="@dimen/search_box_icon_size" android:layout_marginLeft="@dimen/search_box_text_left_margin" android:singleLine="true" android:layout_weight="1" android:inputType="textFilter" android:imeOptions="flagNoExtractUi" android:textCursorDrawable="@drawable/searchedittext_custom_cursor" android:fontFamily="@string/search_font_family"/>
    <ImageView android:id="@+id/search_close_button" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/search_box_close_icon_padding" android:clickable="true" android:layout_width="@dimen/search_box_close_icon_size" android:layout_height="@dimen/search_box_close_icon_size" android:src="@drawable/quantum_ic_close_vd_theme_24" android:tint="@color/quantum_black_secondary_text" android:contentDescription="@string/description_clear_search"/>
</LinearLayout>
