<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/expand_suggestion_card" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/ExpandingEntryCardStyle">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="bold" android:textColor="@color/quickcontact_entry_header_text_color" android:ellipsize="end" android:id="@+id/expand_suggestion_card_title" android:paddingTop="@dimen/quickcontact_suggestion_card_image_spacing" android:paddingBottom="@dimen/quickcontact_suggestion_card_image_spacing" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:textAlignment="viewStart" android:paddingStart="@dimen/quickcontact_suggestion_card_image_spacing"/>
        <TextView android:textSize="@dimen/quickcontact_expanding_help_text_size" android:textColor="@color/quickcontact_entry_header_text_color" android:id="@+id/expand_suggestion_card_help" android:paddingBottom="@dimen/quickcontact_suggestion_card_image_spacing" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/suggestion_card_help_message" android:lineSpacingMultiplier="1.2" android:textAlignment="viewStart" android:paddingStart="@dimen/quickcontact_suggestion_card_image_spacing" android:paddingEnd="@dimen/quickcontact_suggestion_card_image_spacing"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/quickcontact_entry_sub_header_text_color" android:ellipsize="end" android:id="@+id/expand_suggestion_card_this_contact" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/suggestion_card_this_contact_title" android:singleLine="true" android:textAlignment="viewStart" android:paddingStart="@dimen/quickcontact_suggestion_card_image_spacing"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/quickcontact_expanding_item_height">
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/suggestion_icon" android:layout_width="@dimen/quickcontact_suggestion_card_icon_height" android:layout_height="@dimen/quickcontact_suggestion_card_icon_width" android:scaleType="fitCenter" android:layout_marginStart="@dimen/quickcontact_suggestion_card_image_spacing"/>
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@+id/suggestion_for_contact_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginStart="@dimen/quickcontact_expanding_item_image_padding">
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/quickcontact_entry_header_text_color" android:ellipsize="end" android:id="@+id/suggestion_for_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/quickcontact_suggestion_card_layout_margin" android:singleLine="true" android:layout_weight="1"/>
                <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:ellipsize="end" android:id="@+id/suggestion_for_contacts_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/quickcontact_suggestion_card_layout_margin" android:singleLine="true"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/quickcontact_entry_sub_header_text_color" android:ellipsize="end" android:id="@+id/expand_suggestion_card_duplicates_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/suggestion_card_duplicates_title" android:singleLine="true" android:textAlignment="viewStart" android:paddingStart="@dimen/quickcontact_suggestion_card_image_spacing"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/suggestion_list" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true"/>
        <LinearLayout android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="@dimen/quickcontact_expanding_button_section_height" android:layout_marginTop="@dimen/quickcontact_expanding_button_section_padding" android:layout_marginRight="@dimen/quickcontact_expanding_button_right_padding" android:layout_marginBottom="@dimen/quickcontact_expanding_button_section_padding" android:layout_marginEnd="@dimen/quickcontact_expanding_button_right_padding">
            <Button android:id="@+id/cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quickcontact_suggestion_cancel_button" style="?android:attr/buttonBarButtonStyle"/>
            <Button android:ellipsize="end" android:id="@+id/link_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quickcontact_suggestion_link_button" android:lines="1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
