<?xml version="1.0" encoding="utf-8"?>
<view xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="bottom" android:orientation="vertical" android:id="@+id/dialpad_view" android:background="?attr/dialpad_background" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layoutDirection="ltr" class="com.android.phone.common.dialpad.DialpadView">
    <LinearLayout android:orientation="vertical" android:id="@+id/rate_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/ild_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ild_margin_height" android:layout_marginBottom="@dimen/ild_margin_height">
            <TextView android:id="@+id/ild_country" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView android:textStyle="bold" android:id="@+id/ild_rate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="4dp"/>
        </LinearLayout>
        <View android:background="?attr/dialpad_separator_color" android:layout_width="match_parent" android:layout_height="1dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/digits_container" android:layout_width="match_parent" android:layout_height="@dimen/dialpad_digits_adjustable_height">
        <ImageButton android:gravity="center" android:id="@+id/dialpad_back" android:background="@drawable/btn_dialpad_key" android:paddingLeft="@dimen/dialpad_digits_menu_left_padding" android:paddingRight="@dimen/dialpad_digits_menu_right_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_margin="@dimen/dialpad_overflow_margin" android:src="@drawable/ic_arrow_back_black_24dp" android:tint="?attr/dialpad_icon_tint" android:contentDescription="@string/description_dialpad_back"/>
        <ImageButton android:gravity="center" android:id="@+id/dialpad_overflow" android:background="@drawable/btn_dialpad_key" android:paddingLeft="@dimen/dialpad_digits_menu_left_padding" android:paddingRight="@dimen/dialpad_digits_menu_right_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_margin="@dimen/dialpad_overflow_margin" android:src="@drawable/ic_overflow_menu" android:tint="?attr/dialpad_icon_tint" android:contentDescription="@string/description_dialpad_overflow"/>
        <view android:textSize="@dimen/dialpad_digits_adjustable_text_size" android:textStyle="normal" android:textColor="?attr/dialpad_text_color" android:gravity="center" android:id="@+id/digits" android:background="@android:color/transparent" android:focusableInTouchMode="true" android:layout_width="0dp" android:layout_height="match_parent" android:cursorVisible="false" android:maxLines="1" android:scrollHorizontally="true" android:singleLine="true" android:freezesText="true" android:layout_weight="1" android:textCursorDrawable="@null" android:fontFamily="sans-serif" app:resizing_text_min_size="@dimen/dialpad_digits_text_min_size" class="com.android.phone.common.dialpad.DigitsEditText"/>
        <ImageButton android:state_enabled="false" android:id="@+id/deleteButton" android:background="@drawable/btn_dialpad_key" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_dialpad_delete" android:tint="?attr/dialpad_icon_tint" android:contentDescription="@string/description_delete_button" android:paddingStart="@dimen/dialpad_digits_padding" android:paddingEnd="?attr/dialpad_delete_padding"/>
    </LinearLayout>
    <View android:background="?attr/dialpad_separator_color" android:layout_width="match_parent" android:layout_height="1dp"/>
    <Space android:layout_width="match_parent" android:layout_height="@dimen/dialpad_space_above_keys"/>
    <include layout="@layout/dialpad"/>
    <Space android:layout_width="match_parent" android:layout_height="@dimen/dialpad_space_below_keys"/>
</view>
